# dynotests

./: .gitignore  .gitmodules  Cargo.toml  NOTE.md  check.sh  tests.sh
dyno_app/: Cargo.toml
dyno_core/: Cargo.toml
dyno_core/src/: config.rs  lib.rs
dyno_core/src/model/: dynotests.rs  mod.rs  role.rs  users.rs
dyno_core/src/types/: data.rs  data_buffer.rs  infomotor.rs  mod.rs  serial.rs
dyno_stm32/: .mxproject  Cargo.toml  Embed.toml  Makefile  config.mk  dyno_stm32.ioc  rust-toolchain.toml
dyno_stm32/.cargo/: config.toml
dyno_stm32/Core/Inc/: dyno.h  main.h  stm32f4xx_it.h
dyno_stm32/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
dyno_stm32/USB_DEVICE/App/: usb_device.h  usbd_cdc_if.c  usbd_cdc_if.h
dyno_stm32/src/: exti_task.rs  macros.rs  main.rs  max6675.rs  serial.rs  task.rs
dyno_web_backend/: Cargo.toml
dyno_web_frontend/: .gitignore  Cargo.toml
