[workspace]
resolver = "2"
members = [
    # "dyno_web_backend",
    # "dyno_web_frontend",
    "dyno_core",
    # "dyno_app"
] 

[workspace.dependencies]
futures = { version = "0.3.28" }
serde = { version = "1.0", features = ["derive"] }

[workspace.dependencies.dyno_core]
# git = "https://github.com/dynotestpolije/dyno_core.git"
# branch = "dev" 
path = "dyno_core"

