[workspace]
resolver = "2"
members = [
    # "dyno_web_backend",
    # "dyno_web_frontend",
    "dyno_core",
    # "dyno_app"
] 

[workspace.package]
version = "0.1.0"
authors = ["Rizal Achmad Pahlevi <rizal.ahmadp@gmail.com>"]
repository = "https://github.com/dynotestpolije/dyno_core"
homepage = "https://github.com/dynotestpolije/dyno_core"
description = "Dynotests Project application"
license = "MIT"
license-file = "LICENSE"
keywords = ["network", "graphics", "embeded", "gui", "client", "math", "server"]
edition = "2021"

[workspace.dependencies]
futures = { version = "0.3.28" }
serde = { version = "1.0", features = ["derive"] }

[workspace.dependencies.dyno_core]
# git = "https://github.com/dynotestpolije/dyno_core.git"
# branch = "dev" 
default-features = false
path = "dyno_core"

