[workspace]
resolver = "2"
members = [
    # "dyno_web_backend",
    # "dyno_web_frontend",
    "dyno_core",
    "dyno_stm32",
    # "dyno_app"
] 

[workspace.package]
version = "0.1.0"
authors = ["Rizal Achmad Pahlevi <rizal.ahmadp@gmail.com>"]
repository = "https://github.com/dynotestpolije/dyno_core"
homepage = "https://github.com/dynotestpolije/dyno_core"
description = "Dynotests Project application"
# license = "MIT"
license-file = "LICENSE"
keywords = ["network", "graphics", "embeded", "gui", "client", "math", "server"]
edition = "2021"

[workspace.dependencies]
serde           = { version = "1.0",    default-features = false, features = ["derive"] }
derive_more     = { version = "1.0",    default-features = false }
chrono          = { version = "0.4.38", default-features = false }
log             = { version = "0.4"   }

[workspace.dependencies.dyno_core]
# git = "https://github.com/dynotestpolije/dyno_core.git"
# branch = "dev" 
default-features = false
path = "dyno_core"

