[package]
name = "dynotest_app"
readme = "README.md"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
license.workspace = true
license-file.workspace = true
keywords.workspace = true
edition.workspace = true

[features]
default = ["images"]
images = ["dep:image"]
# use_plotter = ["dep:plotters"]
dbg_log  = []


[dependencies]

directories  = { version = "5.0" }
serialport   = { version = "4.2" }
url          = { version = "2.3" }
futures      = { version = "0.3"}
downcast-rs = "1.2"

[dependencies.rfd]
version = "0.14"
default-features = false
features = ["gtk3"]

[dependencies.itertools]
version = "0.13"
default-features = false
features = ["use_std"]

[dependencies.eframe]
version = "0.28.1"
default-features = true
features = ["persistence"]

[dependencies.egui_extras]
version = "0.28.1"


[dependencies.dyno_core]
# if in release change to git url main branch
# git = "https://github.com/dynotestpolije/dyno_types.git"
# branch = "main" 
path = "../dyno_core"
features = ["frontend", "checksum", "use_async", "use_excel", "use_log"]

[dependencies.image]
version = "0.25"
optional = true
default-features = false
features = ["ico", "jpeg", "png", "rgb"]

[package.metadata.deb]
maintainer = "Rizal Achmad Pahlevi <echo 'cml6YWwuYWhtYWRwQGdtYWlsLmNvbQo=' | base64 -d>"
copyright = "2023, Rizal Achmad Pahlevi <echo 'cml6YWwuYWhtYWRwQGdtYWlsLmNvbQo=' | base64 -d>"
license-file = ["LICENSE"]
extended-description = """\
dynotests application for dynotest in State of Polytechnic Jemeber\
building Debian packages from Rust projects."""
depends = "libgtk-3-0 (>= 3.19.12), libssl1.1 (>= 1.1.0), libglib2.0-0 (>= 2.12.0), libxcb-render0-dev, libudev1 (>= 183), libc6 (>= 2.29), libxcb-shape0-dev, libxcb-xfixes0-dev, libxkbcommon-dev"
section = "utility"
priority = "required"
assets = [
    ["target/release/dynotest_app", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/dynotest_app/README", "644"],
    ["assets/*", "usr/share/dynotest_app/assets/", "644"],
    ["utils/DynotestApp.desktop", "usr/share/applications/", "644"],
    ["utils/dynotest_app.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
]

