[package]
name = "dyno_core"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
license.workspace = true
license-file.workspace = true
keywords.workspace = true
edition.workspace = true
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default     = ["std"]
use_model   = ["std"]
std          = [
    "derive_serde",
    "derive_more/std",
    "uom/default",
    "chrono/default",
    "serde/default",
    "derive_more/full",
    "dep:chrono",
    "dep:log",
    "dep:derive_more",
    "dep:uom",
]
derive_serde = [
    "dep:serde",
    "serde/derive",
    "uom?/serde",
    "chrono?/serde",
]

[dependencies]
serde           = { optional = true, version = "1.0",    default-features = false }
uom             = { optional = true, version = "0.36",   default-features = false }
derive_more     = { optional = true, version = "1.0",    default-features = false }
chrono          = { optional = true, version = "0.4.38", default-features = false }
log             = { optional = true, version = "0.4"   }
