[package]
name = "dyno_core"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
license-file.workspace = true
keywords.workspace = true
edition.workspace = true
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default     = ["std"]
use_model   = ["std"]
std          = [
    "derive_serde",
    "derive_more/std",
    "uom/default",
    "chrono/default",
    "serde/default",
    "derive_more/full",
    "dep:chrono",
    "dep:log",
    "dep:derive_more",
    "dep:uom",
]
derive_serde = [
    "dep:serde",
    "serde/derive",
    "uom?/serde",
    "chrono?/serde",
]

[dependencies]
uom             = { optional = true, version = "0.36",  default-features = false }
serde           = { optional = true, workspace = true,  default-features = false }
derive_more     = { optional = true, workspace = true,  default-features = false }
chrono          = { optional = true, workspace = true,  default-features = false }
log             = { optional = true, workspace = true }
