[package]
name = "dyno_stm32"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
license-file.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
cortex-m         = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt      = { version = "0.7.1" }

defmt            = { version = "0.3.5" }
defmt-rtt        = { version = "0.4.0" }
panic-probe      = { version = "0.3.2", features = ["print-defmt"] }

postcard = { version = "1.0.10", default-features = false, features = ["use-defmt"] }

[dependencies.embassy-time]
version =  "0.3"
features = ["tick-hz-32_768", "defmt-timestamp-uptime", "defmt"]

[dependencies.embassy-executor]
version = "0.6"
features = ["task-arena-size-8192", "arch-cortex-m", "executor-interrupt", "executor-thread", "integrated-timers", "defmt"]

[dependencies.embassy-stm32]
version = "0.1.0"
features = ["stm32f411ce", "memory-x", "exti", "unstable-pac", "time-driver-any", "defmt"]


[dependencies.dyno_core]
# git = "https://github.com/dynotestpolije/dyno_core.git"
# branch = "dev" 
default-features = false
workspace = true
features = ["derive_serde"]

